# Agentic-ai-langchain

./: .env.example  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: support_agent.py
backend/app/core/: config.py  logging.py  rate_limit.py
backend/app/db/: models.py  session.py
backend/app/middleware/: logging_middleware.py
backend/app/routers/: __init__.py  chat.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py  repository.py  retrieval_service.py
backend/app/tools/: support_tools.py
backend/tests/: test_health.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  Composer.jsx
frontend/src/lib/: api.js
