[project]
name = "ai-customer-support-backend"
version = "0.1.0"
description = "Async FastAPI + LangChain customer support assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.7",
  "langchain>=1.0.0",
  "langchain-openai>=0.3.0",
  "langchain-groq>=0.2.0",
  "langchain-community>=0.2.7",
  "faiss-cpu>=1.8.0.post1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "python-json-logger>=2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]
